work on publish dialog now. it is awkword

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -919,7 +919,7 @@
                 </div>
 
                 <div class="menu-btn px-md-3 px-1 py-md-1 py-2 my-0" style="line-height:1px">
-                  <svg name="Undo." width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <svg class="undo" name="Undo." width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M19 38C29.4934 38 38 29.4934 38 19C38 8.50659 29.4934 0 19 0C8.50659 0 0 8.50659 0 19C0 29.4934 8.50659 38 19 38Z" fill="white"/>
                   <path d="M29 19.5L10.0373 19.5" stroke="black" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M17 28L10 19.4992L17 11" stroke="black" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -927,7 +927,7 @@
                 </div>
 
                 <div class="menu-btn px-md-3 px-1 py-md-1 py-2 my-0" style="line-height:1px">
-                  <svg name="Redo." width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <svg class="redo" name="Redo." width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M19 38C29.4934 38 38 29.4934 38 19C38 8.50659 29.4934 0 19 0C8.50659 0 0 8.50659 0 19C0 29.4934 8.50659 38 19 38Z" fill="white"/>
                   <path d="M10 19.5H28.9627" stroke="black" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M22 11L29 19.5008L22 28" stroke="black" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -935,7 +935,7 @@
                 </div>
 
                 <div class="menu-btn px-md-3 px-1 py-md-1 py-2 my-0" style="line-height:1px">
-                  <svg name="Share." width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <svg class="share-btn" name="Share." width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M19 38C29.4934 38 38 29.4934 38 19C38 8.50659 29.4934 0 19 0C8.50659 0 0 8.50659 0 19C0 29.4934 8.50659 38 19 38Z" fill="white"/>
                   <path d="M12.934 20.6772L9.59242 23.4811" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M16.117 21.9225L9.98869 27.0648" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
@@ -945,7 +945,7 @@
                 </div>
 
                 <div class="menu-btn px-md-3 px-1 py-md-1 py-2 my-0" style="line-height:1px">
-                  <svg name="Close." width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <svg class="close-btn" name="Close." width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M19 38C29.4934 38 38 29.4934 38 19C38 8.50659 29.4934 0 19 0C8.50659 0 0 8.50659 0 19C0 29.4934 8.50659 38 19 38Z" fill="white"/>
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M19 20.039L14.25 24.789C13.8351 25.204 13.3056 25.3472 13.0674 25.109C12.8292 24.8708 12.9724 24.3413 13.3873 23.9264L18.1373 19.1764L13.2318 14.2708C12.8168 13.8559 12.6736 13.3264 12.9118 13.0882C13.15 12.85 13.6795 12.9932 14.0944 13.4082L19 18.3137L23.9056 13.4082C24.3205 12.9932 24.85 12.85 25.0882 13.0882C25.3264 13.3264 25.1832 13.8559 24.7682 14.2708L19.8627 19.1764L24.6127 23.9264C25.0276 24.3413 25.1708 24.8708 24.9326 25.109C24.6944 25.3472 24.1649 25.204 23.75 24.789L19 20.039Z" fill="black"/>
                   </svg>
