--- a/views/main.hbs
+++ b/views/main.hbs
@@ -13,14 +13,16 @@
       .container {
 
         position: absolute;
-        height: 100%;
         width: 100%;
+        height: 100%;
         background: #1D202A;
         border-radius: 2px;
 
       }
+
     </style>
-    <title>explained</title>
+
+    <title>explained!</title>
   </head>
   <body>
     <section>
